# LibreChat-Ollama

./: README.md  pyproject.toml
Command-Center/: config.py  main.py
Command-Center/commands/: command_runner.py
Command-Center/monitors/: docker_monitor.py  system_monitor.py
Command-Center/ui/: main_window.py  styles.py
Command-Center/utils/: logger.py  pdf_to_text.py
Frontend/: librechat.changed.yaml
Frontend/ollama/: id_ed25519.pub
LibreChat/: docker-compose.override.changed.yml
LibreChat/ollama/: id_ed25519
utils/: mission_control_center.py
